--- a/app.json
+++ b/app.json
@@ -22,6 +22,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5c40161d-2dcc-48d3-8075-c2301a730a98"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/5c40161d-2dcc-48d3-8075-c2301a730a98"
     }
   }
 }
