--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.9",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "51.0.11",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "0.25.16",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.2",
+    "react-native-root-toast": "^3.6.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "typescript": "5.3.3"
   },
   "private": true
 }
