--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "51.0.11",
+    "axios": "^1.7.2",
+    "expo": "51.0.17",
+    "expo-image-picker": "^15.0.6",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "0.25.16",
+    "expo-updates": "0.25.18",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-root-toast": "^3.6.0",
